Fix the sponsor alignment

--- a/resources/2020/css/_sponsors.scss
+++ b/resources/2020/css/_sponsors.scss
@@ -23,6 +23,7 @@ $supporter-margin: (
   flex-wrap: wrap;
   align-items: center;
   width: 100%;
+  justify-content: center;
 
   &:not(:last-child) {
     margin-bottom: rem-calc(120px);
